--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "phundament/p3extensions": "master"
+        "phundament/p3extensions": "dev-master"
     }
 }
