--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "phundament/p3pages",
     "description": "Page Manager",
-    "keywords": ["page","tree"],
-    "homepage": "http://phundament.com/",
-    "type": "library",
-    "license": "BSD",
+    "keywords": ["page","tree","sitemap","structure"],
+    "homepage": "https://github.com/schmunk42/p3pages",
+    "type": "yii-extension",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Tobias Munk",
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=5.3.0",
         "yiisoft/yii": "1.1.*",
-        "phundament/p3extensions": ">=0.7"
+        "phundament/p3extensions": ">=0.7",
+        "crisu83/yii-bootstrap": "1.*, 2.*"
     }
 }
