--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.3.0",
         "yiisoft/yii": "1.1.*",
-        "phundament/p3extensions": ">=0.7",
+        "phundament/p3extensions": ">=0.7,<0.14",
         "crisu83/yii-bootstrap": ">=1.0,<3.0"
     }
 }
