--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,12 @@
     "require": {
         "php": ">=5.3.0",
         "yiisoft/yii": "1.1.*",
-        "phundament/p3extensions": ">=0.16.0",
+        "clevertech/yiibooster": "1.*",
+        "mikehaertl/translatable": "1.*",
+        "schmunk42/access": "@dev",
+        "schmunk42/adjacency-list-behavior": "@dev",
         "schmunk42/relation": "1.*",
-        "clevertech/yiibooster": "1.*"
+        "sammaye/auditrail2": "1.*",
+        "yiiext/status-behavior": "@dev"
     }
 }
