--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
         "schmunk42/adjacency-list-behavior": "@dev",
         "schmunk42/relation": "1.*",
         "sammaye/auditrail2": "1.*",
-        "yiiext/status-behavior": "0.6"
+        "yiiext/status-behavior": "0.6.*"
     }
 }
