--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "yiisoft/yii": "1.1.*",
         "clevertech/yiibooster": "1.*",
         "mikehaertl/translatable": "1.*",
+        "phundament/p3extensions": ">=0.17.0",
         "schmunk42/access": "@dev",
         "schmunk42/adjacency-list-behavior": "@dev",
         "schmunk42/relation": "1.*",
