--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.3.0",
         "yiisoft/yii": "1.1.*",
-        "clevertech/yiibooster": "1.*,2.*",
+        "clevertech/yiibooster": ">=1.0,<3.0",
         "mikehaertl/translatable": "1.*",
         "phundament/p3extensions": ">=0.17.0",
         "schmunk42/access": "@dev",
