--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "schmunk42/adjacency-list-behavior": "@dev",
         "schmunk42/relation": "1.*",
         "sammaye/auditrail2": "1.*",
-        "yiiext/status-behavior": "0.6.*"
+        "yiiext/status-behavior": "0.6.*",
+        "bwoester/yii-static-events-component": "1.*",
+        "bwoester/yii-event-interceptor": "1.*"
     }
 }
