--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         "clevertech/yiibooster": ">=1.0,<3.0",
         "mikehaertl/translatable": "1.*",
         "phundament/p3extensions": ">=0.17.0",
-        "schmunk42/access": "@dev",
-        "schmunk42/adjacency-list-behavior": "@dev",
+        "schmunk42/access": "@stable",
+        "schmunk42/adjacency-list-behavior": "@stable",
         "schmunk42/relation": "1.*",
         "sammaye/auditrail2": "1.*",
-        "yiiext/status-behavior": "0.6.*",
+        "yiiext/status-behavior": "0.7.*",
         "bwoester/yii-static-events-component": "~1.0.2"
     }
 }
