--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "quexer69/p3pages",
+    "name": "phundament/p3pages",
     "description": "Page Manager",
     "keywords": ["page", "tree", "sitemap", "structure"],
     "homepage": "https://github.com/schmunk42/p3pages",
